--- a/RemoteServer/App.config
+++ b/RemoteServer/App.config
@@ -3,4 +3,19 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+	
+	<system.serviceModel>
+
+		<bindings>
+			<basicHttpBinding>
+				<binding name="basicHttpBinding_Portal" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647" maxBufferPoolSize="2147483647">
+					<readerQuotas maxBytesPerRead="2147483647" maxArrayLength="2147483647" maxStringContentLength="2147483647" maxDepth="2147483647" maxNameTableCharCount="2147483647"/>
+				</binding>
+			</basicHttpBinding>
+		</bindings>
+
+	</system.serviceModel>
+
+	
 </configuration>
