--- a/WpfApp/WpfApp.csproj
+++ b/WpfApp/WpfApp.csproj
@@ -97,9 +97,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataServerInterface\DataServerInterface.csproj">
-      <Project>{276bdc39-6440-4454-b3b4-d2e6638ef2f8}</Project>
-      <Name>DataServerInterface</Name>
+    <ProjectReference Include="..\BusinessTier\BusinessTier.csproj">
+      <Project>{dfc6b4a6-6f42-49e9-86be-e97416b0375f}</Project>
+      <Name>BusinessTier</Name>
     </ProjectReference>
     <ProjectReference Include="..\RemoteServer\RemoteServer.csproj">
       <Project>{1ab2077c-b4fd-41d9-9629-34c6f2a775e5}</Project>
